
2022-11-18  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	* cobc.c (print_line): fully honor -fmfcomment by suppressing lines
	  that start with an asterisk from listings

2022-11-15  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	* pplex.l: allow spaces or tab characters after the `$` in MF-style
	  directives
	* pplex.l (cobc_parse_source_format): select X/Open free-form under MF
	* pplex.l (cobc_set_source_format): X/Open free-form format allows lines
	  of up to 255 bytes, and may not be subject to Area A enforcement
	* cobc.c (process_command_line): handling of `-free` is subject to
	  `-std`: it is an alias of `-fformat=free` with the MF-specific
	  semantics of "free" when `-std=mf`

2022-11-08  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	* typeck.c (cb_validate_program_data): DEPENDING var
	  for PIC L data-items can come after parent groups

2022-10-21  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c: rewritten codegen for INITIALIZE of table fields,
	  effectively using the 3.1.2 codegen for that with "check only"
	  for table-format VALUE, then after everything was initialized
	  post-setting of the table-format VALUES with
	  output_initialize_multi_values, a simplified version of the
	  previously often called output_initialize_occurs (now renamed),
	  added originally for FR #234: multiple VALUEs for OCCURS
	* tree.h (cb_field): drop flag_occurs_values
	* codegen.c (output_initialize_to_value, output_initialize_to_default):
	  extracted from output_initialize_one (split only)
	* codegen.c: draft for codegen of better readable init code as
	  done in other places (not active, inspect and decide later)
	* codegen.c (output_figurative): fix bug #724 lvl01 OCCURS items to
	  also correctly INITIALIZE TO VALUE with figurative constants
	* field.c (cleanup_field_value): new function called from field
	  value validation code; replaces values that match default by
	  cb_zero/cb_space for better codegen